--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <title>Computer Graphics - Project 2</title>
   </head>
   <body onload="main();">
-    <button id="gameMode" style="width: 200px; height: 50px;">Classic</button>
+    <button id="lightingButton" style="width: 200px; height: 50px;">Lighting On</button>
 
     <h1><span id="pointsText"></span></h3>
     <h1><span id="bactRemoved"></span></h3>
