--- a/code/index.html
+++ b/code/index.html
@@ -4,10 +4,11 @@
     <title>Computer Graphics - Project 2</title>
   </head>
   <body onload="main();">
+    <h2>Hold Right Click & Drag Sphere to Move, Hover Over Bacteria & Click to Kill</h2>
     <button id="lightingButton" style="width: 200px; height: 50px;">Lighting On</button>
 
-    <h1><span id="pointsText"></span></h3>
-    <h1><span id="bactRemoved"></span></h3>
+    <h2><span id="pointsText"></span></h2>
+    <h2><span id="bactRemoved"></span></h2>
 
     <canvas id="webgl" width="800" height="800">Please use a browser that supports this tag</canvas>
 		<canvas id="bacteria" width="800" height="800"></canvas>
